@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.83 2013/07/25 18:11:37 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.84 2013/07/25 22:09:16 zmedico Exp $
 
 EAPI=3
 PYTHON_COMPAT=(
@@ -276,7 +276,8 @@ src_prepare() {
 		done < <(find . -type f -print0)
 
 		einfo "Adjusting make.globals ..."
-		sed -e "s|^\(PORTAGE_TMPDIR=\)\(/var/tmp\)|\\1\"${EPREFIX}\\2\"|" \
+		sed -e "s|\(/usr/portage\)|${EPREFIX}\\1|" \
+			-e "s|^\(PORTAGE_TMPDIR=\"\)\(/var/tmp\"\)|\\1${EPREFIX}\\2|" \
 			-i cnf/make.globals || die "sed failed"
 
 		einfo "Adjusting repos.conf ..."
